app/assets/stylesheets/header.scss
@import "lib";

section#header{
  width: 100vw;
  height: 60px;
  position:fixed;
  z-index:5;
  background-color: #5f9ea0;
  border-bottom: 5px solid #366;

  .inner{
    max-width: 70rem;
    margin: 0 auto;
  }
}



section#header-end{
  height:65px;
}

span.msr-logo a{
  @include transition(200ms);
  display: block;
  height: 60px;
  padding-left: 1rem;
  line-height: 60px !important;
  font: 300 2rem 'Raleway', helvetica, sans-serif;
  float: left;
  color: #fff;
}

span.header-menu-item {
  width: auto;
  display: inline-block;
  float: right;
  color: #fff;
  font: 400 1rem 'Raleway', helvetica, sans-serif;
  line-height: 60px !important;

  > a{
    @include transition(200ms);
    display: block;
    float: right;
    height: 60px;
    text-align: center;
    padding: 4px 20px;
    line-height: 25px;

    img{
      height: 40px;
      width: 40px;
      border-radius: 20px;
      vertical-align: middle;
      margin-right: 10px;
    }
    &:hover{
      color: #a3e6db;
    }
  }
}

span.menu-button{
  position: relative;
  z-index: 10;
  ul{
    display: none;
    background-color: #fff;
    position: absolute;
    top: 45px;
    right: 20px;
    z-index: 1;
    width: 150px;
    @include prefixer(box-shadow, 0 5px 20px rgba(0, 0, 0, 0.2));

    li{
      @include transition(50ms);
      font-size: 0.8rem;
      padding-left: 15px;
      height: 35px;
      line-height: 35px;
      color: #555;
      border-bottom: 1px solid #eee;

      a{
        display: block;
      }

      &:hover{
        background-color: #a3e6db;
        color: #366;
      }

      &:nth-last-child(1){
        border: none;
      }
    }
  }
}

form.header-search{
  display: inline-block;
  line-height: 60px;
  margin-left: 50px;

  input{
    @include transition(200ms);
    border: none;
    border-radius: 5px;
    font-size: 0.9rem;
    padding: 0.3rem 0.5rem;
    color: #333;
    font-weight: 300;
    width: 100px;
    @include prefixer(box-shadow, none);

    &::-webkit-input-placeholder {
        color:    #366;
        opacity: 0.5;
    }
    &:-moz-placeholder {
       color:    #366;
       opacity:  0.5;
    }
    &::-moz-placeholder {
       color:    #366;
       opacity:  0.5;
    }
    &:-ms-input-placeholder {
       color:    #366;
      opacity: 0.5;
    }

    &:focus{
      width:200px;
    }
  }

  i{
    color: #fff;
    padding-right: 10px;
  }
}

@media screen and (max-width: 700px){
  form.header-search{
    display: none;
  }
}

@media screen and (max-width: 550px){
  span.msr-logo{
    display: none;
  }
}

// Sidenav Menu
.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 65px;
    left: 0;
    background-color: #5f9ea0;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 20px;
    color: #f1f1f1;
    display: block;
    transition: 0.3s;


}

.sidenav a:hover, .offcanvas a:focus{
    color: #a3e6db;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}
  #side-menu{
    font-size:30px;
    cursor:pointer;
    top:0;
    left: 0;
    color: #fff;
    float: left;
    padding-right: 30px;
    padding-top: 8px;

    &:hover{
      color: #a3e6db;
    }
  }


@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

